--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
+<p>Weimar</p>
+
+<app-weimar></app-weimar>
+
+<app-test2></app-test2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -7,6 +27,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!--
 <style>
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -297,8 +318,10 @@
     }
   }
 </style>
+-->
 
 <!-- Toolbar -->
+<!--
 <div class="toolbar" role="banner">
   <img
     width="40"
@@ -316,8 +339,10 @@
 </div>
 
 <div class="content" role="main">
+-->
 
   <!-- Highlight Card -->
+  <!--
   <div class="card highlight-card card-small">
 
     <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
@@ -337,8 +362,10 @@
     </svg>
 
   </div>
+  -->
 
   <!-- Resources -->
+  <!--
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
@@ -367,8 +394,10 @@
     </a>
 
   </div>
+  -->
 
   <!-- Next Steps -->
+  <!--
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
 
@@ -411,8 +440,10 @@
       <span>Build for Production</span>
     </div>
   </div>
+  -->
 
   <!-- Terminal -->
+  <!--
   <div class="terminal" [ngSwitch]="selection.value">
       <pre *ngSwitchDefault>ng generate component xyz</pre>
       <pre *ngSwitchCase="'material'">ng add @angular/material</pre>
@@ -421,8 +452,10 @@
       <pre *ngSwitchCase="'test'">ng test</pre>
       <pre *ngSwitchCase="'build'">ng build --prod</pre>
   </div>
+  -->
 
   <!-- Links -->
+  <!--
   <div class="card-container">
     <a class="circle-link" title="Animations" href="https://angular.io/guide/animations" target="_blank" rel="noopener">
       <svg id="Group_20" data-name="Group 20" xmlns="http://www.w3.org/2000/svg" width="21.813" height="23.453" viewBox="0 0 21.813 23.453">
@@ -500,8 +533,10 @@
       </svg>
     </a>
   </div>
+  -->
 
   <!-- Footer -->
+  <!--
   <footer>
       Love Angular?&nbsp;
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
@@ -520,6 +555,7 @@
   </svg>
 
 </div>
+-->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
