Two way binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,25 @@
 <p>Weimar Torres</p>
 -->
 
+<!--
+<div style="border: 1px solid black;">
+  <app-component-e1 name="Ricardo" age=22 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
+</div>
+
+<div style="border: 1px solid black;">
+  <app-component-e1 name="Amira" age=23 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
+</div>
+-->
+
 <p>Weimar</p>
 
 <div style="border: 1px solid red;">
   <app-weimar age="3" (clickAge)="saveClickChild($event)"></app-weimar>
-</div>
+</div>  
 
 <div style="border: 1px solid black;">
   <app-component-e1 name="Weimar" age=21 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
 </div>
-
-
-
-
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
