--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,7 @@
 <p>Componente test 1</p>
 <p>Entrada age: {{age}}</p>
 <button (click)="onClickSave()">save</button>
+
+<input type="text" [(ngModel)]="user">
+
+<p>User: {{user}}</p>
