Component life cycle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,10 @@
-<!--
-<p>Weimar Torres</p>
--->
+<p>Weimar</p>
+
+<app-weimar *ngIf="sw" name="Weimar"></app-weimar>
+
+<button (click) ="sw = false;">Change sw</button>
 
 <!--
-<div style="border: 1px solid black;">
-  <app-component-e1 name="Ricardo" age=22 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
-</div>
-
-<div style="border: 1px solid black;">
-  <app-component-e1 name="Amira" age=23 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
-</div>
--->
-
 <p>Weimar</p>
 
 <div style="border: 1px solid red;">
@@ -23,7 +16,22 @@
 <div style="border: 1px solid black;">
   <app-component-e1 name="Weimar" age=21 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
 </div>
+-->
 
+<!--
+  <div style="border: 1px solid black;">
+  <app-component-e1 name="Ricardo" age=22 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
+</div>
+
+<app-component-e1 name="Amira" age=23 description="Student" (clickSave)="clickSaveChild($event)"></app-component-e1>
+</div>
+-->
+
+<!--
+<p>Weimar Torres</p>
+-->
+
+<div style="border: 1px solid black;">
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
