--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,12 @@
+<div style="border: 1px solid red;">
+    <p>Test</p>
+
+    <input type="text" [(ngModel)]="name">
+
+    <p>Valor var name: {{name}}</p>
+</div>
+
+<!--
 <p>Componente test 1</p>
 <p>Entrada age: {{age}}</p>
 <button (click)="onClickSave()">save</button>
@@ -5,3 +14,4 @@
 <input type="text" [(ngModel)]="user">
 
 <p>User: {{user}}</p>
+-->
