--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,12 @@
   <p>{{person}} -------------- {{i}}</p>
 </div>
 
+<div [ngSwitch]="aux">
+  <p *ngSwitchCase="3">El valor es 3</p>
+  <p *ngSwitchCase="2">El valor es 2</p>
+  <p *ngSwitchDefault>No es 3 o 2</p>
+</div>
+
 <!--
 <p>Weimar</p>
 
