Admin and user module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
 <app-prod1></app-prod1>
 <app-prod3></app-prod3>
 
+<app-ad1></app-ad1>
+<app-us1></app-us1>
+
 <!--
 <app-weimar *ngIf="sw" name="Weimar"></app-weimar>
 
