--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<p>PIPES</p>
+
+<p>PIPE JSON: {{people | json}}</p>
+
+<p>PIPE UPPERCASE: {{name | uppercase}}</p>
+
+<p>PIPE LOWERCASE: {{'WEIMAR' | lowercase}}</p>
+
+<p>PIPE DATE: {{'08/08/2020' | date: "MM/dd/yy hh:mm:ss"}}</p>
+
+<P>VAR NAME: {{name | test}}</P>
+
+<!--
 <p>Weimar</p>
 
 <div *ngFor="let person of people">
@@ -11,6 +24,7 @@
 
 <app-ad1></app-ad1>
 <app-us1></app-us1>
+-->
 
 <!--
 <app-weimar *ngIf="sw" name="Weimar"></app-weimar>
