--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <p>PIPE LOWERCASE: {{'WEIMAR' | lowercase}}</p>
 
-<p>PIPE DATE: {{'08/08/2020' | date: "MM/dd/yy hh:mm:ss"}}</p>
+<p>PIPE DATE: {{'08/08/2020' | date: "MM/dd/yy h:mm:ss"}}</p>
 
 <P>VAR NAME: {{name | test}}</P>
 
