--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,10 @@
 
 <P>VAR NAME: {{name | test}}</P>
 
-<p>{{4 | expo: 2}}</p>
+VALUE: <input type='text' [(ngModel)]='auxNumber'>
+EXPONENT: <input type='text' [(ngModel)]='auxExponent'>
+
+<p>{{auxNumber | expo: auxExponent: 'Hola'}}</p>
 
 <!--
 <p>Weimar</p>
