--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
 
 <button (click)="numbers.push(4)">Add</button>
 
+<div appNgColor id='weimar' class='test'>
+  Weimar
+</div>
+
 <!--
 <p>PIPES</p>
 
