--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <button (click)="numbers.push(4)">Add</button>
 
-<div appNgColor id='weimar' class='test'>
+<div [appNgColor]="'green'"[secondColor]="'yellow'"> 
   Weimar
 </div>
 
