Input set and get

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
   Weimar
 </div>
 
+<button (click)="name = 'Maria'; lastName = 'Gutierrez'">Change name, lastName</button>
+<app-weimar [name]="name" [lastName]="lastName"></app-weimar>
+
 <!--
 <p>PIPES</p>
 
