Output in directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div style='border: 1px solid green' (appNgFocus)="name='Change'">{{name}}</div>
+
+<!--
 <p>PIPES</p>
 
 <p>PURE: {{numbers | pure}}</p>
@@ -12,6 +15,7 @@
 
 <button (click)="name = 'Maria'; lastName = 'Gutierrez'">Change name, lastName</button>
 <app-weimar [name]="name" [lastName]="lastName"></app-weimar>
+-->
 
 <!--
 <p>PIPES</p>
