--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<div *ngIf="allInscribed" style="border: 1px solid black; background: lightBlue">Todos los habilitados estan inscritos</div>
+<div *ngIf="allInscribed" style="border: 1px solid black; background: lightGreen">Todos los habilitados estan inscritos</div>
+
+<div style="border: 1px solid black; background: lightBlue">Inscritos: {{totalInscribed}}</div>
 
 <div style="border: 1px solid black; background: lightBlue">Primaria</div>
 <div style="border: 1px solid black; background: lightBlue">Total {{totalPrimary}}</div>
 
 <div *ngFor="let student of primary">
   <div [ngStyle]="{'background': (student.edad < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado"></app-student>
+    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado" (enrollEvent)="enroll($event)"></app-student>
   </div>
 </div>
 
@@ -14,6 +16,6 @@
 
 <div *ngFor="let student of highSchool">
   <div [ngStyle]="{'background': (student.edad < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado"></app-student>
+    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado" (enrollEvent)="enroll($event)"></app-student>
   </div>
 </div>
