Navigation with buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<p><ROUTING/p>
+<p>ROUTING</p>
+
+<button routerLink='home'>HOME</button>
+<button routerLink='admin'>ADMIN</button>
+<button routerLink='about'>ABOUT</button>
 
 <div style="border: 1px solid red">
   <router-outlet></router-outlet>
