--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,10 @@
 <p>
 home works!
 </p>
+
+<button routerLink='home1'>HOME 1</button>
+<button routerLink='home2'>HOME 2</button>
+
+<div style="border: 1px solid green">
+  <router-outlet></router-outlet>
+</div>
