--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <button routerLink='home'>HOME</button>
 <button routerLink='admin'>ADMIN</button>
 <button routerLink='about'>ABOUT</button>
+<button routerLink='user'>USER</button>
 
 <div style="border: 2px solid red">
   <router-outlet></router-outlet>
