--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,3 +1,10 @@
 <p>
 user works!
 </p>
+
+<button routerLink='user1'>user1</button>
+<button routerLink='user2'>user2</button>
+
+<div style="border: 1px solid green">
+  <router-outlet></router-outlet>
+</div>
