--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <p>ROUTING</p>
 
+<button type="button" class="btn btn-danger">Danger</button>
+
 <button routerLink='home'>HOME</button>
 <button routerLink='admin'>ADMIN</button>
 <button routerLink='about'>ABOUT</button>
