--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,18 @@
 <button routerLink='about'>ABOUT</button>
 <button routerLink='user'>USER</button>
 
+<div class="btn-group btn-group-toggle">
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton > Left (pre-checked)
+  </label>
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton > Middle
+  </label>
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton> Right
+  </label>
+</div>
+
 <div style="border: 2px solid red">
   <router-outlet></router-outlet>
 </div>
