--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,16 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='home' routerLinkActive='active'>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Admin</a>
+        <a class="nav-link" routerLink='admin' routerLinkActive='active'>Admin</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">List</a>
+        <a class="nav-link" routerLink='list' routerLinkActive='active'>List</a>
       </li>
     </ul>
   </div>
 </nav>
+<router-outlet></router-outlet>
