own structural directive

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -2,6 +2,6 @@
 
 <button routerLink="/pages">LOGIN</button>
 
-<button (click)="sw != sw">sw</button>
+<button (click)="sw = !sw">sw</button>
 <p>{{sw}}</p>
 <p *ngElse="sw">SE MUESTRA SI ES FALSO</p>
