--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,6 +1,39 @@
 <p>login works!</p>
 
+<!--EXAMPLE 1-->
+<!--
+<div style="display: flex; flex-direction: column;">
+  <input type="text" [(ngModel)]="username">
+  <input type="password" [(ngModel)]="password">
+</div>
+
+<button (click)="onLogin()">LOGIN</button>
+-->
+
+<!--EXAMPLE 2-->
+<!--
+<div style="display: flex; flex-direction: column;">
+  <form #form="ngForm">
+    <input type="text" name="username" ngModel>
+    <input type="password" name="password" ngModel>
+  </form>
+</div>
+
+<button (click)="onLogin2(form)">LOGIN 2</button>
+-->
+
+<div style="display: flex; flex-direction: column;">
+  <form (ngSubmit)="onLogin2(form)" #form="ngForm">
+    <input type="text" name="username" ngModel>
+    <input type="password" name="password" ngModel>
+    <button type="submit">ENVIAR</button>
+  </form>
+</div>
+
+
+<!--
 <button routerLink="/pages">LOGIN</button>
+-->
 
 <button (click)="sw = !sw">sw</button>
 <p>{{sw}}</p>
