Validation Template-Driven Form

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -22,6 +22,7 @@
 <button (click)="onLogin2(form)">LOGIN 2</button>
 -->
 
+<!--
 <div style="display: flex; flex-direction: column;">
   <form (ngSubmit)="onLogin2(form)" #form="ngForm">
     <input type="text" name="username" ngModel>
@@ -29,12 +30,27 @@
     <button type="submit">ENVIAR</button>
   </form>
 </div>
+-->
 
+
+<input class="form-control" type="text" required minlength="3" maxlength="5" ngModel #name="ngModel">
+
+<div *ngIf="name.invalid && (name.touched || name.dirty)" class="alert alert-danger">
+  <div *ngIf="name.errors.required">
+    Name is required
+  </div>
+  <div *ngIf="name.errors.minlength">
+    Name must have 4 characteres
+  </div>
+  <div *ngIf="name.errors.maxlength">
+    Name must have 5 characteres max
+  </div>
+</div>
 
 <!--
 <button routerLink="/pages">LOGIN</button>
--->
 
 <button (click)="sw = !sw">sw</button>
 <p>{{sw}}</p>
 <p *ngElse="sw">SE MUESTRA SI ES FALSO</p>
+-->
