Validation Reactive Forms

--- a/src/app/pages/admin/admin/admin.component.html
+++ b/src/app/pages/admin/admin/admin.component.html
@@ -9,6 +9,17 @@
 <!--EXAMPLE 2-->
 <form [formGroup]="productForm" style="display: flex; flex-direction: column;">
   <input formControlName="description" type="text">
+  <div *ngIf="productForm.get('description').invalid && (productForm.get('description').touched || productForm.get('description').dirty)" class="alert alert-danger">
+    <div *ngIf="productForm.get('description').errors.required">
+      Name is required
+    </div>
+    <div *ngIf="productForm.get('description').errors.minlength">
+      Name must have 3 characteres
+    </div>
+  </div>
+  <div *ngIf="productForm.get('description').errors.maxlength">
+    Name must have 5 characteres max
+  </div>
   <input formControlName="imageUrl" type="text">
   <input formControlName="ownerId" type="text">
   <input formControlName="price" type="text">
