--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,3 +1,12 @@
-<p>
-student works!
-</p>
+<div>
+  <p>Nombre: {{name | uppercase}}</p>
+  <p>Edad: {{age}}</p>
+  <p>Grado: {{grade}}</p>
+
+  <div *ngIf="(age < 19)">
+    <button (click)="enroll()">Inscribir</button>
+  </div>
+  <div *ngIf="(age >= 19)">
+    <button disabled>Inscribir</button>
+  </div>
+</div>
