Add students provider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 <div style="border: 1px solid black; background: lightBlue">Total {{totalPrimary}}</div>
 
 <div *ngFor="let student of primary">
-  <div [ngStyle]="{'background': (student.edad < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado" (enrollEvent)="enroll($event)"></app-student>
+  <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
+    <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
   </div>
 </div>
 
@@ -15,7 +15,7 @@
 <div style="border: 1px solid black; background: lightBlue">Total {{totalHighSchool}}</div>
 
 <div *ngFor="let student of highSchool">
-  <div [ngStyle]="{'background': (student.edad < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.nombre" [age]="student.edad" [grade]="student.grado" (enrollEvent)="enroll($event)"></app-student>
+  <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
+    <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
   </div>
 </div>
