--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -2,6 +2,7 @@
   <p>Nombre: {{name | uppercase}}</p>
   <p>Edad: {{age}}</p>
   <p>Grado: {{grade}}</p>
+  <img [src]="imageUrl" width="100" height="100">
 
   <div *ngIf="(age < 19)">
     <button (click)="enroll()">Inscribir</button>
