--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,61 @@
-<div *ngIf="allInscribed" style="border: 1px solid black; background: lightGreen">Todos los habilitados estan inscritos</div>
+<mat-drawer-container autosize style="width: 100%; height: 600px;">
+  <mat-drawer #drawer style="width: 300px; height: 100%;" mode="side" [position]="'end'">
+    <form [formGroup]="studentForm" style="display: flex; flex-direction: column; padding: 20px;">
+      <mat-form-field>
+        <mat-label>Description</mat-label>
+        <input matInput formControlName="description" type="text">
+      </mat-form-field>
+      <div *ngIf="studentForm.get('description').invalid && (studentForm.get('description').touched || studentForm.get('description').dirty)" class="alert alert-danger">
+        <div *ngIf="studentForm.get('description').errors.required">
+          Name is required
+        </div>
+        <div *ngIf="studentForm.get('description').errors.minlength">
+          Name must have 3 characteres
+        </div>
+      </div>
+      <mat-form-field>
+        <mat-label>Image Url</mat-label>
+        <input matInput formControlName="imageUrl" type="text">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Owner Id</mat-label>
+        <input matInput formControlName="ownerId" type="text">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Price</mat-label>
+        <input matInput formControlName="price" type="text">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Title</mat-label>
+        <input matInput formControlName="title" type="text">
+      </mat-form-field>
+    </form>
+    <button (click)="onEnviar2()">Create</button>
+    <button (click)="onUpdateProduct()">Update</button>
+  </mat-drawer>
 
-<div style="border: 1px solid black; background: lightBlue">Inscritos: {{totalInscribed}}</div>
-
-<div style="border: 1px solid black; background: lightBlue">Primaria</div>
-<div style="border: 1px solid black; background: lightBlue">Total {{totalPrimary}}</div>
-
-<div *ngFor="let student of primary">
-  <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">
+      Crear
+    </button>
   </div>
-</div>
 
-<div style="border: 1px solid black; background: lightBlue">Secundaria</div>
-<div style="border: 1px solid black; background: lightBlue">Total {{totalHighSchool}}</div>
+  <div style="border: 1px solid black; background: lightBlue">Primaria</div>
+  <div style="border: 1px solid black; background: lightBlue">Total {{totalPrimary}}</div>
 
-<div *ngFor="let student of highSchool">
-  <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
-    <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+  <div *ngFor="let student of primary">
+    <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
+      <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+    </div>
   </div>
-</div>
+
+  <div style="border: 1px solid black; background: lightBlue">Secundaria</div>
+  <div style="border: 1px solid black; background: lightBlue">Total {{totalHighSchool}}</div>
+
+  <div *ngFor="let student of highSchool">
+    <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
+      <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+    </div>
+  </div>
+  
+</mat-drawer-container>
