--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,36 @@
 <mat-drawer-container autosize style="width: 100%; height: 600px;">
   <mat-drawer #drawer style="width: 300px; height: 100%;" mode="side" [position]="'end'">
+    <p>Crear estudiante</p>
+    <p>Editar estudiante</p>
     <form [formGroup]="studentForm" style="display: flex; flex-direction: column; padding: 20px;">
       <mat-form-field>
-        <mat-label>Description</mat-label>
-        <input matInput formControlName="description" type="text">
+        <mat-label>Nombre</mat-label>
+        <input matInput formControlName="name" type="text">
       </mat-form-field>
-      <div *ngIf="studentForm.get('description').invalid && (studentForm.get('description').touched || studentForm.get('description').dirty)" class="alert alert-danger">
-        <div *ngIf="studentForm.get('description').errors.required">
+      <div *ngIf="studentForm.get('name').invalid && (studentForm.get('name').touched || studentForm.get('name').dirty)" class="alert alert-danger">
+        <div *ngIf="studentForm.get('name').errors.required">
           Name is required
         </div>
-        <div *ngIf="studentForm.get('description').errors.minlength">
+        <div *ngIf="studentForm.get('name').errors.minlength">
           Name must have 3 characteres
+        </div>
+      </div>
+      <mat-form-field>
+        <mat-label>Edad</mat-label>
+        <input matInput formControlName="age" type="number">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Grado</mat-label>
+        <input matInput formControlName="grade" type="text">
+      </mat-form-field>
+      <div *ngIf="studentForm.get('grade').invalid && (studentForm.get('grade').touched || studentForm.get('grade').dirty)" class="alert alert-danger">
+        <div *ngIf="studentForm.get('grade').errors.required">
+          Name is required
         </div>
       </div>
       <mat-form-field>
         <mat-label>Image Url</mat-label>
         <input matInput formControlName="imageUrl" type="text">
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Owner Id</mat-label>
-        <input matInput formControlName="ownerId" type="text">
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Price</mat-label>
-        <input matInput formControlName="price" type="text">
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Title</mat-label>
-        <input matInput formControlName="title" type="text">
       </mat-form-field>
     </form>
     <button (click)="onEnviar2()">Create</button>
