--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,8 @@
     <p>Crear estudiante</p>
     <p>Editar estudiante</p>
     <form [formGroup]="studentForm" style="display: flex; flex-direction: column; padding: 20px;">
-      <mat-form-field>
-        <mat-label>Nombre</mat-label>
-        <input matInput formControlName="name" type="text">
-      </mat-form-field>
+      <p>Nombre</p>
+      <input formControlName="name" type="text">
       <div *ngIf="studentForm.get('name').invalid && (studentForm.get('name').touched || studentForm.get('name').dirty)" class="alert alert-danger">
         <div *ngIf="studentForm.get('name').errors.required">
           Name is required
@@ -15,26 +13,20 @@
           Name must have 3 characteres
         </div>
       </div>
-      <mat-form-field>
-        <mat-label>Edad</mat-label>
-        <input matInput formControlName="age" type="number">
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Grado</mat-label>
-        <input matInput formControlName="grade" type="text">
-      </mat-form-field>
+      <p>Edad</p>
+      <input formControlName="age" type="number">
+      <p>Grado</p>
+      <input formControlName="grade" type="text">
       <div *ngIf="studentForm.get('grade').invalid && (studentForm.get('grade').touched || studentForm.get('grade').dirty)" class="alert alert-danger">
         <div *ngIf="studentForm.get('grade').errors.required">
           Name is required
         </div>
       </div>
-      <mat-form-field>
-        <mat-label>Image Url</mat-label>
-        <input matInput formControlName="imageUrl" type="text">
-      </mat-form-field>
+      <p>Image Url</p>
+      <input formControlName="imageUrl" type="text">
     </form>
-    <button (click)="onEnviar2()">Create</button>
-    <button (click)="onUpdateProduct()">Update</button>
+    <button (click)="create()">Crear</button>
+    <button (click)="edit()">Editar</button>
   </mat-drawer>
 
   <div class="example-sidenav-content">
@@ -48,7 +40,7 @@
 
   <div *ngFor="let student of primary">
     <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
-      <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+      <app-student [inputSideNav]="drawer" [id]="student.id" [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (editEvent)="edit($event)"></app-student>
     </div>
   </div>
 
@@ -57,7 +49,7 @@
 
   <div *ngFor="let student of highSchool">
     <div [ngStyle]="{'background': (student.age < 19) ? 'orange' : 'red'}">
-      <app-student [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (enrollEvent)="enroll($event)"></app-student>
+      <app-student [inputSideNav]="drawer" [id]="student.id" [name]="student.name" [age]="student.age" [grade]="student.grade" [imageUrl]="student.urlImage" (editEvent)="edit($event)"></app-student>
     </div>
   </div>
   
