Added Edit, Add, Delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,10 +23,10 @@
         </div>
       </div>
       <p>Image Url</p>
-      <input formControlName="imageUrl" type="text">
+      <input formControlName="urlImage" type="text">
     </form>
     <button (click)="create()">Crear</button>
-    <button (click)="edit()">Editar</button>
+    <button (click)="editDB()">Editar</button>
   </mat-drawer>
 
   <div class="example-sidenav-content">
