--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,7 +1,7 @@
 <div>
   <p>Nombre: {{name | uppercase}}</p>
   <p>Edad: {{age}}</p>
-  <p>Grado: {{grade}}</p>
+  <p>Grado: {{auxGrade}}</p>
   <img [src]="imageUrl" width="100" height="100">
 
   <button mat-raised-button (click)="edit()">Edit</button>
