--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,4 +1,33 @@
-<p>login works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>LOGIN</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form #form="ngForm" style="display: flex; flex-direction: column;">
+      <mat-form-field>
+        <mat-label>EMAIL</mat-label>
+        <input matInput  type="text" name="email" ngModel required #emailUI="ngModel">
+        <div *ngIf="emailUI.invalid && (emailUI.touched || emailUI.dirty)" class="alert alert-danger">
+          <div *ngIf="emailUI.errors.required">
+            Name is required
+          </div>
+        </div>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>PASSWORD</mat-label>
+        <input matInput type="password" name="password" ngModel required #passwordUI="ngModel">
+        <div *ngIf="passwordUI.invalid && (passwordUI.touched || passwordUI.dirty)" class="alert alert-danger">
+          <div *ngIf="passwordUI.errors.required">
+            Name is required
+          </div>
+        </div>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button [disabled]="form.invalid" (click)="onLogin(form)">LOGIN</button>
+  </mat-card-actions>
+</mat-card>
 
 <!--EXAMPLE 1-->
 <!--
@@ -32,7 +61,7 @@
 </div>
 -->
 
-
+<!--
 <input class="form-control" type="text" required minlength="3" maxlength="5" ngModel #name="ngModel">
 
 <div *ngIf="name.invalid && (name.touched || name.dirty)" class="alert alert-danger">
@@ -46,6 +75,7 @@
     Name must have 5 characteres max
   </div>
 </div>
+-->
 
 <!--
 <button routerLink="/pages">LOGIN</button>
