AutoLogin, Logout, Singleton

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" routerLink='list' routerLinkActive='active'>List</a>
         </li>
       </ul>
-      <button routerLink="/login">LOGOUT</button>
+      <button (click)="onLogout()">LOGOUT</button>
     </div>
 </nav>
 
