--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,34 @@
-<p>
-login works!
-</p>
+<mat-card class="example-card">
+
+  <mat-card-header>
+    <mat-card-title>LOGIN</mat-card-title>
+  </mat-card-header>
+  
+  <mat-card-content>
+    <form #form="ngForm" style="display: flex; flex-direction: column;">
+      <mat-form-field>
+        <mat-label>EMAIL</mat-label>
+        <input matInput  type="text" name="email" ngModel required #emailUI="ngModel">
+        <div *ngIf="emailUI.invalid && (emailUI.touched || emailUI.dirty)" class="alert alert-danger">
+          <div *ngIf="emailUI.errors.required">
+            Email is required
+          </div>
+        </div>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>PASSWORD</mat-label>
+        <input matInput type="password" name="password" ngModel required #passwordUI="ngModel">
+        <div *ngIf="passwordUI.invalid && (passwordUI.touched || passwordUI.dirty)" class="alert alert-danger">
+          <div *ngIf="passwordUI.errors.required">
+            Password is required
+          </div>
+        </div>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  
+  <mat-card-actions>
+    <button mat-button [disabled]="form.invalid" (click)="onLogin(form)">LOGIN</button>
+  </mat-card-actions>
+
+</mat-card>
