--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,12 @@
 <p>
 admin works!
 </p>
+
+<div class="row">
+  <p>ELDERY</p>
+  <div *ngFor="let person of eldery" class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="padding: 50px; display: flex; justify-content: center;">
+
+    <app-card [id]="person.id" [name]="person.name" [age]="person.age" [enable]="person.enable" [urlImage]="person.urlImage"></app-card>
+
+  </div>
+</mat-drawer-container>
