--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
 admin works!
 </p>
 
-<p>ELDERY</p>
+<div style="border: 1px solid black; background: lightBlue">ELDERY</div>
 <div class="row">
   <div *ngFor="let person of eldery" class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="padding: 50px; display: flex; justify-content: center;">
 
@@ -11,7 +11,7 @@ admin works!
   </div>
 </div>
 
-<p>YOUNG</p>
+<div style="border: 1px solid black; background: lightBlue">YOUNG</div>
 <div class="row">
   <div *ngFor="let person of young" class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="padding: 50px; display: flex; justify-content: center;">
 
