--- a/src/app/admin/components/card/card.component.html
+++ b/src/app/admin/components/card/card.component.html
@@ -10,5 +10,6 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="onComprar(product)">Comprar</button>
+    <button mat-button (click)="delete()">Delete</button>
   </mat-card-actions>
 </mat-card>
