--- a/src/app/admin/components/card/card.component.html
+++ b/src/app/admin/components/card/card.component.html
@@ -9,7 +9,7 @@
     
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="onComprar(product)">Comprar</button>
+    <button mat-button (click)="edit()">Edit</button>
     <button mat-button (click)="delete()">Delete</button>
   </mat-card-actions>
 </mat-card>
