--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@ admin works!
 
 <mat-drawer-container autosize style="width: 100%; height: 100%px;">
 
-  <app-form #appForm (createEvent)="create($event)"></app-form>
+  <app-form #appForm (event)="loadPeople()"></app-form>
 
   <button mat-button style="background: yellow; margin: 10px" (click)="openDrawer(true)">ADD</button>
 
@@ -12,7 +12,7 @@ admin works!
   <div class="row">
     <div *ngFor="let person of eldery" class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="padding: 50px; display: flex; justify-content: center;">
 
-      <app-card [id]="person.id" [name]="person.name" [age]="person.age" [enable]="person.enable" [urlImage]="person.urlImage" (deleteEvent)="delete($event)"></app-card>
+      <app-card [id]="person.id" [name]="person.name" [age]="person.age" [enable]="person.enable" [urlImage]="person.urlImage" (editEvent)="edit(false, $event)" (deleteEvent)="delete($event)"></app-card>
 
     </div>
   </div>
@@ -21,7 +21,7 @@ admin works!
   <div class="row">
     <div *ngFor="let person of young" class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" style="padding: 50px; display: flex; justify-content: center;">
 
-      <app-card [id]="person.id" [name]="person.name" [age]="person.age" [enable]="person.enable" [urlImage]="person.urlImage" (deleteEvent)="delete($event)"></app-card>
+      <app-card [id]="person.id" [name]="person.name" [age]="person.age" [enable]="person.enable" [urlImage]="person.urlImage" (editEvent)="edit(false, $event)" (deleteEvent)="delete($event)"></app-card>
 
     </div>
   </div>
