--- a/src/app/admin/components/header/header.component.html
+++ b/src/app/admin/components/header/header.component.html
@@ -1,19 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">PEDIDOS YA</a>
+    <a class="navbar-brand" href="#">ELECTIONS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink='home' routerLinkActive='active'>Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink='admin' routerLinkActive='active'>Admin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink='list' routerLinkActive='active'>List</a>
-        </li>
+        <p>aaa</p>
       </ul>
       <button (click)="onLogout()">LOGOUT</button>
     </div>
