--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 
+<form [formGroup]="searchForm" style="display: flex; flex-direction: column; padding: 20px;">
+  <input formControlName="search" type="text">
+</form>
+<button (click)="search()">Search</button>
+
 <mat-drawer-container autosize style="width: 100%; height: 100%px;">
 
   <app-form #appForm (event)="loadPeople()"></app-form>
